--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet"
     type="text/css" />
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -27,10 +27,10 @@
           LevelUp - продукт для повышения потенции
         </h1>
         <picture class="section-promo__content_pic">
-          <source media="(max-width: 320px)" srcset="/images/prod-200-320.png">
-          <source media="(max-width: 768px)" srcset="/images/prod-250-768.png">
-          <source media="(max-width: 1024px)" srcset="/images/prod-300-1024.png">
-          <img src="/images/prod-350-desktop.png" alt="">
+          <source media="(max-width: 320px)" srcset="images/prod-200-320.png">
+          <source media="(max-width: 768px)" srcset="images/prod-250-768.png">
+          <source media="(max-width: 1024px)" srcset="images/prod-300-1024.png">
+          <img src="images/prod-350-desktop.png" alt="">
         </picture>
         <ul class="section-promo__content_list">
           <li class="section-promo__content_item">
@@ -68,10 +68,10 @@
         <ul class="section-product__content_list">
           <li class="section-product__content_item">
             <picture class="section-product__content_item-pic">
-              <source media="(max-width: 320px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 768px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/prod-80-desktop.png">
-              <img src="/images/prod-80-desktop.png" alt="">
+              <source media="(max-width: 320px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 768px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 1024px)" srcset="images/prod-80-desktop.png">
+              <img src="images/prod-80-desktop.png" alt="">
             </picture>
             <p class="section-product__content_item-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit
@@ -79,10 +79,10 @@
           </li>
           <li class="section-product__content_item">
             <picture class="section-product__content_item-pic">
-              <source media="(max-width: 320px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 768px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/prod-80-desktop.png">
-              <img src="/images/prod-80-desktop.png" alt="">
+              <source media="(max-width: 320px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 768px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 1024px)" srcset="images/prod-80-desktop.png">
+              <img src="images/prod-80-desktop.png" alt="">
             </picture>
             <p class="section-product__content_item-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit
@@ -90,10 +90,10 @@
           </li>
           <li class="section-product__content_item">
             <picture class="section-product__content_item-pic">
-              <source media="(max-width: 320px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 768px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/prod-80-desktop.png">
-              <img src="/images/prod-80-desktop.png" alt="">
+              <source media="(max-width: 320px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 768px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 1024px)" srcset="images/prod-80-desktop.png">
+              <img src="images/prod-80-desktop.png" alt="">
             </picture>
             <p class="section-product__content_item-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit
@@ -101,29 +101,18 @@
           </li>
           <li class="section-product__content_item">
             <picture class="section-promo__content_pic">
-              <source media="(max-width: 320px)" srcset="/images/prod-200-320.png">
-              <source media="(max-width: 768px)" srcset="/images/prod-250-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/prod-300-1024.png">
-              <img src="/images/prod-350-desktop.png" alt="">
+              <source media="(max-width: 320px)" srcset="images/prod-200-320.png">
+              <source media="(max-width: 768px)" srcset="images/prod-250-768.png">
+              <source media="(max-width: 1024px)" srcset="images/prod-300-1024.png">
+              <img src="images/prod-350-desktop.png" alt="">
             </picture>
           </li>
           <li class="section-product__content_item">
             <picture class="section-product__content_item-pic">
-              <source media="(max-width: 320px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 768px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/prod-80-desktop.png">
-              <img src="/images/prod-80-desktop.png" alt="">
-            </picture>
-            <p class="section-product__content_item-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit
-            </p>
-          </li>
-          <li class="section-product__content_item">
-            <picture class="section-product__content_item-pic">
-              <source media="(max-width: 320px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 768px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/prod-80-desktop.png">
-              <img src="/images/prod-80-desktop.png" alt="">
+              <source media="(max-width: 320px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 768px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 1024px)" srcset="images/prod-80-desktop.png">
+              <img src="images/prod-80-desktop.png" alt="">
             </picture>
             <p class="section-product__content_item-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit
@@ -131,10 +120,21 @@
           </li>
           <li class="section-product__content_item">
             <picture class="section-product__content_item-pic">
-              <source media="(max-width: 320px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 768px)" srcset="/images/prod-100-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/prod-80-desktop.png">
-              <img src="/images/prod-80-desktop.png" alt="">
+              <source media="(max-width: 320px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 768px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 1024px)" srcset="images/prod-80-desktop.png">
+              <img src="images/prod-80-desktop.png" alt="">
+            </picture>
+            <p class="section-product__content_item-desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+          </li>
+          <li class="section-product__content_item">
+            <picture class="section-product__content_item-pic">
+              <source media="(max-width: 320px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 768px)" srcset="images/prod-100-768.png">
+              <source media="(max-width: 1024px)" srcset="images/prod-80-desktop.png">
+              <img src="images/prod-80-desktop.png" alt="">
             </picture>
             <p class="section-product__content_item-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit
@@ -156,7 +156,7 @@
         <div class="swiper-container myReviews">
           <div class="swiper-wrapper myReviews__wrapper">
             <div class="myReviews__wrapper_slide swiper-slide">
-              <img src="/images/avatar-1.png" alt="" class="myReviews__wrapper_slide-pic">
+              <img src="images/avatar-1.png" alt="" class="myReviews__wrapper_slide-pic">
               <p class="myReviews__wrapper_slide-name">
                 Lorem Ipsum I
               </p>
@@ -167,7 +167,7 @@
               </p>
             </div>
             <div class="myReviews__wrapper_slide swiper-slide">
-              <img src="/images/avatar-2.png" alt="" class="myReviews__wrapper_slide-pic">
+              <img src="images/avatar-2.png" alt="" class="myReviews__wrapper_slide-pic">
               <p class="myReviews__wrapper_slide-name">
                 Lorem Ipsum II
               </p>
@@ -178,7 +178,7 @@
               </p>
             </div>
             <div class="myReviews__wrapper_slide swiper-slide">
-              <img src="/images/avatar-3.png" alt="" class="myReviews__wrapper_slide-pic">
+              <img src="images/avatar-3.png" alt="" class="myReviews__wrapper_slide-pic">
               <p class="myReviews__wrapper_slide-name">
                 Lorem Ipsum III
               </p>
@@ -203,10 +203,10 @@
         <ul class="section-homo__content_list">
           <li class="section-homo__content_item">
             <picture class="section-homo__content_item-pic">
-              <source media="(max-width: 320px)" srcset="/images/doctor-new-320.png">
-              <source media="(max-width: 768px)" srcset="/images/doctor-new-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/doctor-new-1024.png">
-              <img src="/images/doctor-new.png" alt="">
+              <source media="(max-width: 320px)" srcset="images/doctor-new-320.png">
+              <source media="(max-width: 768px)" srcset="images/doctor-new-768.png">
+              <source media="(max-width: 1024px)" srcset="images/doctor-new-1024.png">
+              <img src="images/doctor-new.png" alt="">
             </picture>
           </li>
           <li class="section-homo__content_item">
@@ -263,10 +263,10 @@
         <ul class="section-order__content_list">
           <li class="section-order__content_item">
             <picture class="section-promo__content_pic">
-              <source media="(max-width: 450px)" srcset="/images/prod-150-440.png">
-              <source media="(max-width: 768px)" srcset="/images/prod-250-768.png">
-              <source media="(max-width: 1024px)" srcset="/images/prod-300-1024.png">
-              <img src="/images/prod-350-desktop.png" alt="">
+              <source media="(max-width: 450px)" srcset="images/prod-150-440.png">
+              <source media="(max-width: 768px)" srcset="images/prod-250-768.png">
+              <source media="(max-width: 1024px)" srcset="images/prod-300-1024.png">
+              <img src="images/prod-350-desktop.png" alt="">
             </picture>
           </li>
           <li class="section-order__content_item">
