--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <title>LevelUp</title>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-  <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet"
-    type="text/css" />
+  <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="styles/style.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -272,10 +271,10 @@
           <li class="section-order__content_item">
             <ul class="section-order__content_price">
               <li class="section-order__content_price-new">
-                3 000 <span class="rubl">&#8399;</span>
+                3 000 <span class="rubl">&#8381;</span>
               </li>
               <li class="section-order__content_price-old">
-                2 000 <span class="rubl">&#8399;</span>
+                2 000 <span class="rubl">&#8381;</span>
               </li>
             </ul>
           </li>
